--- a/CarnetSanitaire.Web.UI/Views/Diagnostiques/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Diagnostiques/Index.cshtml
@@ -5,11 +5,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h2>Liste des Diagnostique</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -38,10 +35,13 @@
                 @Html.DisplayFor(modelItem => item.Diagnostique_Intervenant)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a>
+                <a asp-action="Edit" asp-route-id="@item.Id" class="px-2"><i class="far fa-edit"></i></a>
+                <a asp-action="Details" asp-route-id="@item.Id" class="px-2"><i class="fas fa-info"></i></a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<div class="row col-12">
+    <a asp-action="Create" class="btn btn-outline-success col-12">Nouveau Diag.</a>
+</div>
