--- a/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Installations/Details.cshtml
@@ -62,7 +62,7 @@
             }
             else
             {
-                <a asp-action="Details" asp-controller="Productions" asp-route-installationId="@Model.Id" class="btn btn-outline-secondary">Voir la Production</a>
+                <a asp-action="Details" asp-controller="Productions" class="btn btn-outline-secondary">Voir la Production</a>
             }
         </dd>
 
