--- a/CarnetSanitaire.Web.UI/Views/Productions/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Create.cshtml
@@ -43,14 +43,15 @@
                 <select asp-for="TypeProductionId" asp-items="ViewBag.TypeProduction" class="form-control"></select>
                 <span asp-validation-for="TypeProductionId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="row form-group">
+                <input type="submit" value="Create" class="btn btn-outline-primary col-6" />
+                <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-6">Retour</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    
 </div>
 
