--- a/CarnetSanitaire.Web.UI/Views/Productions/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Productions/Details.cshtml
@@ -11,33 +11,45 @@
     <h4>Production</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.Identification)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.Identification)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.NombreBallon)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.NombreBallon)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.TemperatureDepartEcs)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.TemperatureDepartEcs)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-4">
             @Html.DisplayNameFor(model => model.TemperatureBouclageEcs)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-8">
             @Html.DisplayFor(model => model.TemperatureBouclageEcs)
+        </dd>
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.TypeReseau)
+        </dt>
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.TypeReseau.Nom)
+        </dd>
+        <dt class="col-sm-4">
+            @Html.DisplayNameFor(model => model.TypeProduction)
+        </dt>
+        <dd class="col-sm-8">
+            @Html.DisplayFor(model => model.TypeProduction.Nom)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row col-12">
+    <a asp-action="Edit" class="btn btn-outline-primary col-6">Modifier</a>
+    <a asp-action="Details" asp-controller="Installations" class="btn btn-outline-danger col-6">Retour</a>
 </div>
