--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Create.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Create.cshtml
@@ -10,7 +10,7 @@
 <h4>Etablissement</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -58,14 +58,12 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-12 row">
+                <input type="submit" value="Create" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="Index"  class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
