--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Details.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Details.cshtml
@@ -10,29 +10,29 @@
 <div>
     <h4>Etablissement</h4>
     <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
+    <dl class="row col-md-8">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Nom)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Nom)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Capacite)
         </dt>
-        <dd class = "col-sm-10">
+        <dd class = "col-sm-7">
             @Html.DisplayFor(model => model.Capacite)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class = "col-sm-5">
             @Html.DisplayNameFor(model => model.Coordonnee)
         </dt>
-        <dd class="col-sm-10">
+        <dd class="col-sm-7">
             @Html.DisplayFor(model => model.Coordonnee.Adresse)<br />
             @Html.DisplayFor(model => model.Coordonnee.CodePostal) @Html.DisplayFor(model => model.Coordonnee.Ville)
         </dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+<div class="row col-md-8">
+    <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-outline-primary col-12 col-md-6">Edit</a>
+    <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
 </div>
