--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Edit.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Edit.cshtml
@@ -59,14 +59,11 @@
                 <input asp-for="Email" class="form-control" />
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+            <div class="form-group col-12 row">
+                <input type="submit" value="Create" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
