--- a/CarnetSanitaire.Web.UI/Views/Etablissements/Index.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Etablissements/Index.cshtml
@@ -7,9 +7,6 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -46,3 +43,7 @@
 }
     </tbody>
 </table>
+<div class="row col-12">
+    <a asp-action="Create" class="btn btn-outline-success col-12 col-md-6">Nouvel Etablissement</a>
+    <a asp-action="Index" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
+</div>
