--- a/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
@@ -7,9 +7,6 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 <table class="table">
     <thead>
         <tr>
@@ -38,11 +35,13 @@
                 @Html.DisplayFor(modelItem => item.Statut)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="EditPoint" asp-route-id="@item.Id" class="px-2"><i class="far fa-edit"></i></a>
+                <a asp-action="DetailsPoint" asp-route-id="@item.Id" class="px-2"><i class="fas fa-info"></i></a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+<div class="row col-12">
+    <a asp-action="CreatePoint" class="btn btn-outline-primary col-12">Nouveau Point</a>
+</div>
