--- a/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
@@ -10,7 +10,7 @@
 <h4>PointReleveTemperature</h4>
 <hr />
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-8">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
@@ -25,17 +25,14 @@
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Statut" /> @Html.DisplayNameFor(model => model.Statut)
+                    <input class="form-check-input" asp-for="Statut" checked/> @Html.DisplayNameFor(model => model.Statut)
                 </label>
             </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+            <div class="form-group col-12 row">
+                <input type="submit" value="Enregistrer" class="btn btn-outline-primary col-12 col-md-6" />
+                <a asp-action="IndexPoints" class="btn btn-outline-danger col-12 col-md-6">Retour</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
