--- a/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
@@ -23,9 +23,14 @@
                 <input asp-for="Localisation" class="form-control" />
                 <span asp-validation-for="Localisation" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="TypePoint" class="control-label"></label>
+                <select asp-for="TypePoint" asp-items="ViewBag.TypePoint" class="form-control" ></select>
+                <span asp-validation-for="TypePoint" class="text-danger"></span>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
-                    <input class="form-check-input" asp-for="Statut" checked/> @Html.DisplayNameFor(model => model.Statut)
+                    <input class="form-check-input" asp-for="Statut" checked /> @Html.DisplayNameFor(model => model.Statut)
                 </label>
             </div>
             <div class="form-group col-12 row">
