--- a/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/IndexPoints.cshtml
@@ -17,6 +17,9 @@
                 @Html.DisplayNameFor(model => model.Localisation)
             </th>
             <th>
+                @Html.DisplayNameFor(model => model.TypePoint)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Statut)
             </th>
             <th></th>
@@ -30,6 +33,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Localisation)
+            </td>
+            <td>
+
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Statut)
