--- a/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/CreatePoint.cshtml
@@ -25,7 +25,9 @@
             </div>
             <div class="form-group">
                 <label asp-for="TypePoint" class="control-label"></label>
-                <select name="TypePointId" asp-items="ViewBag.TypePoint" class="form-control" ></select>
+                <select asp-for="TypePointId" asp-items="ViewBag.TypePoint" class="form-control" >
+                    <option>Selectionnez un type de point</option>
+                </select>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
