--- a/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
+++ b/CarnetSanitaire.Web.UI/Views/Temperatures/EditPoint.cshtml
@@ -24,6 +24,11 @@
                 <input asp-for="Localisation" class="form-control" />
                 <span asp-validation-for="Localisation" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="TypePoint" class="control-label"></label>
+                <select asp-for="TypePointId" asp-items="ViewBag.TypePoint" class="form-control">                    
+                </select>
+            </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Statut" /> @Html.DisplayNameFor(model => model.Statut)
